--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <p>This page generates the number to generate a QR- or Barcode from.</p>
   <input id="postNumber" type="number">
   <button id="button" onclick="generate();">Submit</button>
+  <p id="htmlResult"></p>
 </body>
 </html>
