include barcode to page

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <input id="postNumber" type="number">
   <button id="button" onclick="generate();">Submit</button>
   <p id="htmlResult"></p>
+  <p id="htmlBarcode"></p>
 </body>
 </html>
