made code robust

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <h1>DHL Packstation Code Generator</h1>
-  <p>This page generates the number to generate a QR- or Barcode from.</p>
+  <p>Page to generate post number for QR- and barcode.</p>
   <input id="postNumber" type="number">
   <button id="button" onclick="generate();">Submit</button>
+  <h1 id="htmlResultHeadline"></h1>
   <p id="htmlResult"></p>
-  <p id="htmlBarcode"></p>
+  <p id="htmlResultBarcode"></p>
 </body>
 </html>
